--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </li>
 </li>
 </a>
-<a class="nav-link active" aria-current="page" href="---">jso</a>
+<a class="nav-link active" aria-current="page" href="http://ridho.6te.net/jso.php">jso</a>
 </li>
 <li class="nav-item">
 <a class="nav-link active" aria-current="page" href="https://wa.me/+62895619811574">Kontak</a>
@@ -56,7 +56,7 @@
 </a>
 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 <li><a class="dropdown-item" href="https://wa.me/+62895619811574=1">contact</a></li>
-<li><a class="dropdown-item" href="---">Jso</a></li>
+<li><a class="dropdown-item" href="http://ridho.6te.net/jso.php">Jso</a></li>
 </ul>
 </li>
 </div>
