--- a/index.html
+++ b/index.html
@@ -157,6 +157,6 @@ color: lime;
 	<h4 style="text-align:center;color:red;">Copyright 2021 By RidhoGanz</font>
 
 <b>
-<style>body { background-image: url(https://g.top4top.io/p_202381r1g1.gif);background-size: cover;background-repeat: no-repeat;background-attachment: fixed;text-shadow: 0 0 3px blue, 0px 0px 5px green;font-family:Iceberg;}#xx{font:40px Iceberg;font-weight:bold;color:black;text-shadow: 0 0 3px green, 0px 0px 5px green;position:absolute;left:0;right:0;top:15%;}
+<style>body { background-image: url(https://b.top4top.io/p_2041nfub30.jpg);background-size: cover;background-repeat: no-repeat;background-attachment: fixed;text-shadow: 0 0 3px blue, 0px 0px 5px green;font-family:Iceberg;}#xx{font:40px Iceberg;font-weight:bold;color:black;text-shadow: 0 0 3px green, 0px 0px 5px green;position:absolute;left:0;right:0;top:15%;}
 </body>
 <center>
