--- a/index.html
+++ b/index.html
@@ -170,3 +170,214 @@ https://templatemo.com/tm-541-host-cloud
 <!-- Testimonials Starts Here --> <div class="testimonials-section"> <div class="container"> <div class="row"> <div class="col-md-12"> <div class="section-heading"> <span>Testimonials</span> <h2>What they say about us</h2> </div> </div> <div class="col-md-10 offset-md-1"> <div class="owl-testimonials owl-carousel"> <div class="testimonial-item"> <div class="icon"> <i class="fa fa-quote-right"></i> </div> <p>"Ut elementum a elit sed tristique. Pellentesque sed semper erat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean quam erat, rutrum ut malesuada."</p> <h4>William Smith</h4> <span>New Co-Founder</span> </div> <div class="testimonial-item"> <div class="icon"> <i class="fa fa-quote-right"></i> </div> <p>"Quisque lacinia sed velit et maximus. Quisque dictum, lacus a malesuada finibus, arcu magna luctus risus, eu accumsan risus elit vitae lacus."</p> <h4>Vinny Smart</h4> <span>Digital Marketer</span> </div> <div class="testimonial-item"> <div class="icon"> <i class="fa fa-quote-right"></i> </div> <p>"Vestibulum mauris ipsum, tempor tincidunt justo sit amet, bibendum tincidunt dui. Aenean molestie, odio quis viverra ultricies, leo tellus lacinia neque, sit amet maximus tortor nunc aliquet felis."</p> <h4>Trevor Liam</h4> <span>Technology Chef</span> </div> </div> </div> </div> </div> </div> <!-- Testimonials Ends Here -->
 
 <!-- Footer Starts Here --> <footer><div class="container"> <div class="row"> <div class="col-md-3 col-sm-6 col-xs-12"> <div class="footer-item"> <div class="footer-heading"> <h2>Contact US</h2> </div> <ul class="footer-list"><li>Phone: <a href="https://wa.me/62895619811574">+62895619811574</a></li> <li>Email: <a href="#"><span class="__cf_email__" data-cfemail="84e9ece0edf6f2e5eab6b4bcb3c4e3e9e5ede8aae7ebe9">[email&nbsp;protected]</span></a></li> <li>Facebook: <a href="https://www.facebook.com/">RIDHO Xyz</a></li> </ul></div> </div> <div class="col-md-12"> <div class="sub-footer"> <p>Copyright &copy; 2020				- Designed by <a rel="nofollow" href="https://facebook.com/"RIDHO Hosting</a></p> </div> </div> </div> </div> </footer><!-- Footer Ends Here --><!-- Bootstrap core JavaScript --><script data-cfasync="false" src="js/cloudflare-static-email-decode.min.js"></script><script src="js/jquery-jquery.min.js"></script><script src="js/js-bootstrap.bundle.min.js"></script><!-- Additional Scripts --><script src="js/js-custom.js"></script><script src="js/js-owl.js"></script><script src="js/js-accordions.js"></script><script language="text/Javascript"> cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field function clearField(t){ //declaring the array outside of the if(! cleared[t.id]){ // function makes it static and global cleared[t.id] = 1; // you could use true and false, but that's more typing t.value=''; // with more chance of typos t.style.color='#fff'; } } </script></div></body></html>
+
+<DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>BBX-Host</title>
+  <meta property="og:image"content="https://d.top4top.io/p_1814ehn6m0.jpeg">
+  <meta content="Provider Hosting Terpercaya Dengan Harga Murah" name="description">
+  <meta content="Provider Hosting Terpercaya Dengan Harga Murah" name="keywords">
+
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top ">
+    <div class="container d-flex align-items-center justify-content-between">
+
+      <h1 class="logo"><a href="index.html">BBX-Host</a></h1>
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+
+    </div>
+  </header><!-- End Header -->
+
+  <!-- ======= Hero Section ======= -->
+  <section id="hero">
+    <div class="hero-container">
+      <h3>Welcome to <strong>BBX-Host</strong></h3>
+      <h1>Provider Hosting Murah Terpercaya</h1>
+      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+    </div>
+  </section><!-- End Hero -->
+
+    <!-- ======= Pricing Section ======= -->
+    <section id="pricing" class="pricing">
+      <div class="container">
+
+
+        <div class="row">
+
+<div class="col-lg-4 col-md-6">
+            <div class="box">
+              <h3>Domain Murah</h3>
+              <ul>
+<li> .ASIA : 60K</li>
+<li> .BIZ: 70K</li>
+<li> .SPACE :45K</li>
+<li> .XYZ : 20K</li>
+<li> .MY.ID : 20K</li>
+<li> .TECH: 55K</li>
+<li> .SITE : 45K</li>
+<li> .STORE :55K</li>
+<li> .SHOP : 55K</li>
+<li> .SCH.ID : 70K</li>
+<li> .HOST : 60K</li>
+<li> .ONLINE: 30K</li>
+<li> .OR.ID :60K</li>
+<li> .VIP : 60K</li>
+<li> .WEBSITE : 40K</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="regist.html" class="btn-buy">Beli</a>
+              </div>
+            </div>
+          </div>
+          <br>
+          	<br>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="box">
+              <h3>Wariors</h3>
+              <h4><sup></sup>7k<span> / Bulan</span></h4>
+              <ul>
+                <li>1 Domain</li>
+<li>1GB SSD Storage</li>
+<li>Unlimited Email</li>
+<li>Unlimited Bandwidth</li>
+<li>Unlimited Sub Domain</li>
+<li>Free Premium Theme & Plugin</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="regist.html" class="btn-buy">Beli</a>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-lg-4 col-md-6">
+            <div class="box">
+              <h3>Soldiers</h3>
+              <h4><sup></sup>10k<span> / Bulan</span></h4>
+              <ul>
+        <li>1 Domain</li>
+<li>2GB SSD Storage</li>
+<li>Unlimited Email</li>
+<li>Unlimited Bandwidth</li>
+<li>Unlimited Sub Domain</li>
+<li>Free Premium Theme & Plugin</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="regist.html" class="btn-buy">Beli</a>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-lg-4 col-md-6">
+            <div class="box">
+              <h3>Elite</h3>
+              <h4><sup></sup>12k<span> / Bulan</span></h4>
+              <ul>
+<li>1 Domain</li>
+<li>5GB SSD Storage</li>
+<li>Unlimited Email</li>
+<li>Unlimited Bandwidth</li>
+<li>Unlimited Sub Domain</li>
+<li>Free Premium Theme & Plugin</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="regist.html" class="btn-buy">Beli</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
+            <div class="box recommended">
+              <span class="recommended-badge">Recommended</span>
+              <h3>Master</h3>
+              <h4><sup></sup>17k<span> / Bulan</span></h4>
+              <ul>
+<li>1 Domain</li>
+<li>10GB SSD Storage<li>
+<li>Unlimited Email</li>
+<li>Unlimited Bandwidth</li>
+<li>Unlimited Sub Domain</li>
+<li>Free Premium Theme & Plugin</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="regist.html" class="btn-buy">Beli</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
+            <div class="box">
+              <h3>Unlimited</h3>
+              <h4><sup></sup>45k<span> / Bulan</span></h4>
+              <ul>
+<li>Unlimited Inode</li>
+<li>Unlimited Email</li>
+<li>Unlimited Domain</li>
+<li>Unlimited Bandwidth</li>
+<li>Unlimited SSD Storage</li>
+<li>Free Premium Theme & Plugin</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="regist.html" class="btn-buy">Beli</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Pricing Section -->
+<br><br>
+
+    <div class="container d-md-flex py-4">
+
+      <div class="me-md-auto text-center text-md-start">
+        <div class="copyright">
+          &copy; Copyright <strong><span>BBX-Host</span></strong>. All Rights Reserved
+        </div>
+
+
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+
+</body>
+
+</html>
